chrome/magnetic/parts/icons.css
/* ... */
#sidebar-switcher-arrow,
#viewButton .button-menu-dropmarker,
.popup-notification-dropmarker .button-icon {
	-moz-appearance: none !important;
	list-style-image: url("../icons/pan-down-symbolic.svg") !important;
	width: 16px !important;
	height: 16px !important;
}
.menulist-label-box:after {
	content: url("../icons/pan-down-symbolic.svg") !important;
}

/* Arrow up buttons */
/*
.expander-up > .button-box {
	-moz-appearance: none !important;
	list-style-image: url("../icons/pan-up-symbolic.svg") !important;
	width: 16px !important;
	height: 16px !important;
}
*/
.expander-up > .button-box,
#sidebar-switcher-arrow,
#viewButton .button-menu-dropmarker,
.popup-notification-dropmarker .button-icon {
	-moz-appearance: none !important;
	list-style-image: url("../icons/pan-up-symbolic.svg") !important;
}
#sidebar-switcher-arrow,
#viewButton .button-menu-dropmarker,
.popup-notification-dropmarker .button-icon {
	-moz-appearance: none !important;
	list-style-image: url("../icons/pan-up-symbolic.svg") !important;
	width: 16px !important;
	height: 16px !important;
}
.menulist-label-box:after {
	content: url("../icons/pan-up-symbolic.svg") !important;
}


/* Search entries */
#urlbar[pageproxystate="invalid"] > #identity-box > #identity-icon,
.searchbar-search-icon,
#search-box .textbox-search-sign {
	list-style-image: url("../icons/edit-find-symbolic.svg") !important;
	opacity: 0.7 !important;
}
#search-box .textbox-search-sign {
	width: 16px !important;
	margin: 2px 0;
}

/* Tree views */
treechildren::-moz-tree-twisty,
.item.client .item-twisty-container {
	list-style-image: url("../icons/pan-end-symbolic.svg") !important;
	width: 16px !important;
	height: 16px !important;
}
.item.client .item-twisty-container {
	background-image: url("../icons/pan-end-symbolic.svg") !important;
}
treechildren::-moz-tree-twisty(open) {
	list-style-image: url("../icons/pan-down-symbolic.svg") !important;
}
.item.client.closed .item-twisty-container {
	background-image: url("../icons/pan-down-symbolic.svg") !important;
}

treechildren::-moz-tree-image(title, container),
treechildren::-moz-tree-image(title, open) {
	list-style-image: url("../icons/folder-symbolic.svg") !important;
}
treechildren::-moz-tree-image(title, query, dayContainer),
treechildren::-moz-tree-image(query, OrganizerQuery_history____v) {
	list-style-image: url("../icons/preferences-system-time-symbolic.svg") !important;
}

/* Close button */
.close-icon:not(.tab-close-button),
.identity-popup-permission-remove-button .button-icon {
	list-style-image: url("../icons/window-close-symbolic.svg") !important;
}

/* Sound icons */
.tab-icon-overlay[soundplaying] {
	list-style-image: url("../icons/audio-playing-symbolic.svg") !important;
}
.tab-icon-overlay[muted] {
	list-style-image: url("../icons/audio-muted-symbolic.svg") !important;
}

/* Private browsing button */
#privatebrowsing-button {
	list-style-image: url("../icons/user-not-tracked.svg") !important;
}
/* Sidebar button */
#sidebar-button:-moz-locale-dir(ltr):not([positionend]) .toolbarbutton-icon, #sidebar-button:-moz-locale-dir(rtl)[positionend]  .toolbarbutton-icon {
	list-style-image: url("../icons/toggle-sidebar-symbolic.svg") !important;
}
#sidebar-button .toolbarbutton-icon {
	list-style-image: url("../icons/toggle-right-sidebar-symbolic.svg");
}
/* Back button */
#nav-bar #back-button .toolbarbutton-icon,
#context-back {
	list-style-image: url("../icons/go-previous-symbolic.svg") !important;
}
/* Forward button */
#nav-bar #forward-button,
#context-forward,
#urlbar-go-button,
.search-go-button {
	list-style-image: url("../icons/go-next-symbolic.svg") !important;
}
/* Menu button */
#PanelUI-menu-button {
	list-style-image: url("../icons/open-menu-symbolic.svg") !important;
}
/* New tab button */
#new-tab-button,
.tabs-newtab-button,
#tabs-newtab-button,
#TabsToolbar {
	list-style-image: url("../icons/tab-new-symbolic.svg") !important;
}
/*Home button 
#home-button {
	list-style-image: url("../icons/user-home-symbolic.svg") !important;
}*/

/* Preferences button */
#preferences-button,
.search-setting-button-compact > .button-box > .button-icon {
	list-style-image: url("../icons/preferences-system-symbolic.svg") !important;
}
/* Fullscreen button */
#fullscreen-button,
#appMenu-fullscreen-button {
	list-style-image: url("../icons/view-fullscreen-symbolic.svg") !important;
}
/* Zoom out button */
#zoom-out-button,
#appMenu-zoomReduce-button {
	list-style-image: url("../icons/zoom-out-symbolic.svg") !important;
}
/* Zoom in button */
#zoom-in-button,
#appMenu-zoomEnlarge-button {
	list-style-image: url("../icons/zoom-in-symbolic.svg") !important;
}
/* Developer button */
#developer-button {
	list-style-image: url("../icons/applications-engineering-symbolic.svg") !important;
}
/* Email link button */
#email-link-button {
	list-style-image: url("../icons/mail-unread-symbolic.svg") !important;
}
/* Print button */
#print-button {
	list-style-image: url("../icons/printer-symbolic.svg") !important;
}
/* Addons button */
#add-ons-button,
#addons-notification-icon,
.install-icon {
	list-style-image: url("../icons/application-x-addon-symbolic.svg") !important;
}
/* Find button */
#find-button {
	list-style-image: url("../icons/edit-find-symbolic.svg") !important;
}
/* New window button */
#new-window-button {
	list-style-image: url("../icons/window-new-symbolic.svg") !important;
}
/* Bookmarks menu button */
#bookmarks-menu-button {
	list-style-image: url("../icons/bookmarks-symbolic.svg") !important;
}
/* History button */
#history-panelmenu,
#sidebar-box[sidebarcommand="viewHistorySidebar"] > #sidebar-header > #sidebar-switcher-target > #sidebar-icon,
.urlbarView-row[source="history"] > .urlbarView-row-inner > .urlbarView-no-wrap > .urlbarView-favicon,
#urlbar-engine-one-off-item-history {
	list-style-image: url("../icons/preferences-system-time-symbolic.svg") !important;
}
/* All tabs button */
#alltabs-button {
	list-style-image: url("../icons/pan-down-symbolic.svg") !important;
}
/* ... */

